--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -269,8 +269,24 @@ $(".tablaitem:eq(" + index + ")").hide();
 return false;
 }
 
+   
 
 
+</script>
+
+<script language="javascript">
+    window.onbeforeunload = function (evt) {
+
+        var message = 'Are youo sure you want to close this window!!!';
+        if (typeof evt == 'undefined') {//IE
+            evt = window.event;
+        }
+        if (evt) {
+            evt.returnValue = message;
+        }
+
+        return message;
+    }
 </script>
 
 
