Cambios para autoajustar las cardview

--- a/Views/ClienteInicio/GridLibros.cshtml
+++ b/Views/ClienteInicio/GridLibros.cshtml
@@ -1,7 +1,9 @@
 ﻿
 @{
     ViewData["Title"] = "GridLibros";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <main>
     <section class="jumbotron bg-white text-center mb-0">
@@ -45,10 +47,6 @@
     </div>
 </main>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://unpkg.com/popper.js@1.14.3/dist/umd/popper.min.js"></script>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
+
 @*<script src="js/bootstrap.min.js"></script>*@
 
