--- a/Views/ClienteInicio/Index.cshtml
+++ b/Views/ClienteInicio/Index.cshtml
@@ -69,13 +69,14 @@
                     </div>
                 </div>
                 <!--/.First slide-->
+                <!--Second slide-->
                 <div class="carousel-item">
                     <div class="row">
                         @for (int i = 3; i < 5; i++)
                         {
                             <div class="col-md-4">
                                 <div class="card">
-                                    <img class="card-img-top" src="@cat.mtoCatLibros[i].imagen"
+                                    <img class="card-img-top"  src="@cat.mtoCatLibros[i].imagen"
                                          alt="@cat.mtoCatLibros[i].titulo">
                                     <div class="card-body">
                                         <h4 class="card-title">@cat.mtoCatLibros[i].titulo</h4>
