ACABADA HU27, por fin puta madre

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -83,14 +83,7 @@
                                 <thead>
                                     <tr>
                                         <th scope="col" class="border-0 bg-light px-0">
-                                            <div class="p-2 px-3 text-uppercase">
-                                                @foreach (var Libroslista in Model)
-                                            {
-                                                @Libroslista
-
-
-                                            }
-                                            </div>
+                                            <div class="p-2 px-3 text-uppercase">Cocoteca/libros</div>
                                         </th>
                                     </tr>
                                 </thead>
@@ -98,77 +91,53 @@
                                 <th scope="row" class="border-0">
                                     <div class="p-2">
                                         <div class="d-inline-block">
-                                            <img src="  @foreach (var Libroslista in Model)
-                                                {
-                                                    @Libroslista
-                                                }" height="400px" width="320px">
+                                            <img src=@foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(9))
+                                                        {
+                                                            @Libroslista
+                                                        } height="400px" width="320px">
                                         </div>
                                         <div class="ml-3 d-inline-block align-top">
                                             <div class="d-inline-block">
                                                 <h2>
-                                                    @foreach (var Libroslista in Model)
-                                                {
-                                                    @Libroslista
-                                                }
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(1))
+                                                    {
+                                                        @Libroslista
+                                                    }
                                                 </h2>
-                                                <h5>
-                                                    <footer class="blockquote-footer">
-                                                    </footer>
-                                                </h5><br>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>ISBN:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                <h5><footer class="blockquote-footer">
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(2))
                                                     {
                                                         @Libroslista
                                                     }
-                                                    </font>
-                                                </p>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>Editorial:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                </footer></h5><br>
+                                                <p><font>
+                                                <u> <b>ISBN:</b></u>  
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).Where(n => n.Length == 4).First())
                                                     {
                                                         @Libroslista
                                                     }
-
-                                                    </font>
-                                                </p>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>Paginas:</b></u>
-                                                        @foreach (var Libroslista in Model)
+                                                </font></p>
+                                                <p><font>
+                                                <u> <b>Editorial:</b></u>
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(10))
                                                     {
                                                         @Libroslista
                                                     }
-                                                    </font>
-                                                </p>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>Año de Impresion:</b></u>
-                                                        @foreach (var Libroslista in Model)
-                                                        {
+                                                </font></p>
+                                                <p><font>
+                                                <u> <b>Paginas:</b></u>
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(4))
+                                                    {
                                                         @Libroslista
-                                                        }
-                                                    </font>
-                                                </p>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>No. Edicion:</b></u>
-                                                        @foreach (var Libroslista in Model)
-                                                        {
+                                                    }
+                                                </font></p>
+                                                <p><font>
+                                                <u> <b>Año de Impresion:</b></u>
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(6))
+                                                    {
                                                         @Libroslista
-                                                        }
-                                                    </font>
-                                                </p>
-                                                <p>
-                                                    <font>
-                                                        <u> <b>Pais:</b></u> @foreach (var Libroslista in Model)
-    {
-                                                        @Libroslista
-    }
-                                                    </font>
-                                                </p>
+                                                    }
+                                                </font></p>
                                                 <br><br>
                                             </div>
                                             <div class="ml-8 d-inline-block align-top">
@@ -179,7 +148,12 @@
 
                                                         <h5 class="card-title text-muted text-uppercase text-center">En Stock</h5>
 
-                                                        <h5 class="card-price text-center">$1,300</h5>
+                                                        <h5 class="card-price text-center">
+                                                            $@foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(7))
+                                                            {
+                                                                @Libroslista
+                                                            }
+                                                        </h5>
                                                         <hr>
                                                         <div class="box-1">
                                                             <div class="btn btn-dos ">
@@ -193,10 +167,10 @@
                                             <div class="card" style="width: 35rem;">
                                                 <div class="card-body">
                                                     <p><font><u> <b>Sinopsis:</b></u></font></p>
-                                                    @foreach (var Libroslista in Model)
-                                                {
-                                                    @Libroslista
-                                                }
+                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(3))
+                                                    {
+                                                        @Libroslista
+                                                    }
                                                 </div>
                                             </div>
                                         </div>
@@ -213,10 +187,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </body>
 </html>
 
